--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,3 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
-animedev==1.0.0
-async-timeout==4.0.2
-attrs==21.4.0
-beautifulsoup4==4.11.1
-bidict==0.22.0
-bleach==5.0.0
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.12
-commonmark==0.9.1
-cryptography==37.0.2
-dnspython==2.2.1
-docutils==0.18.1
-frozenlist==1.3.0
-idna==3.3
-importlib-metadata==4.11.4
-jeepney==0.8.0
-keyring==23.5.1
-MouseInfo==0.1.3
-multidict==6.0.2
-Pillow==9.1.1
-pkginfo==1.8.2
-psutil==5.9.1
-py-tgcalls==0.6.0
-pyaes==1.6.1
-pyasn1==0.4.8
-PyAutoGUI==0.9.53
-pycparser==2.21
-PyGetWindow==0.0.9
-Pygments==2.12.0
-pymongo==4.1.1
-PyMsgBox==1.0.9
-pyperclip==1.8.2
-PyRect==0.2.0
-Pyrogram==2.0.23
-PyScreeze==0.1.28
-PySocks==1.7.1
-python-engineio==4.3.2
-python-socketio==5.6.0
-python3-xlib==0.15
-pytweening==1.0.4
-pyvips==2.2.1
-readme-renderer==35.0
-requests==2.27.1
-requests-toolbelt==0.9.1
-rfc3986==2.0.0
-rich==12.4.4
-rsa==4.8
-SecretStorage==3.3.2
-six==1.16.0
-soupsieve==2.3.2.post1
-Telethon==1.24.0
-TgCrypto==1.2.3
-twine==4.0.0
-urllib3==1.26.9
-webencodings==0.5.1
-yarl==1.7.2
-youtube-dl==2021.12.17
-zipp==3.8.0
+telethon
+pymongo
+dnspython
